Adicionei a parte de Cadastro e Consulta de Fornecedores

--- a/src/main/java/main/Main.form
+++ b/src/main/java/main/Main.form
@@ -156,6 +156,9 @@
                   <Color id="Hand Cursor"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFornecedoresActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnProdutos">
               <Properties>
