--- a/v2/src/main/java/view/supplier/SupplierResgistrationDialog.form
+++ b/v2/src/main/java/view/supplier/SupplierResgistrationDialog.form
@@ -80,7 +80,7 @@
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
                                       <EmptySpace min="-2" pref="250" max="-2" attributes="0"/>
-                                      <Component id="myButton11" min="-2" pref="100" max="-2" attributes="0"/>
+                                      <Component id="btnRegisterSupplier" min="-2" pref="100" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -122,7 +122,7 @@
                       <EmptySpace min="-2" pref="124" max="-2" attributes="0"/>
                       <Component id="myButton12" min="-2" pref="30" max="-2" attributes="0"/>
                       <EmptySpace pref="307" max="32767" attributes="0"/>
-                      <Component id="myButton11" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnRegisterSupplier" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -140,12 +140,12 @@
                 <Property name="text" type="java.lang.String" value="SUPPLIER REGISTRATION"/>
               </Properties>
             </Component>
-            <Component class="my_components.MyButton1" name="myButton11">
+            <Component class="my_components.MyButton1" name="btnRegisterSupplier">
               <Properties>
                 <Property name="text" type="java.lang.String" value="REGISTER"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="myButton11ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegisterSupplierActionPerformed"/>
               </Events>
             </Component>
             <Component class="my_components.MyTextField1" name="txtFieldCorporateName">
